fix linter issues...

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,12 +1,12 @@
+run:
+  timeout: 10m
 linters:
   disable-all: true
   enable:
     - asciicheck
     - bidichk
     - bodyclose
-    - contextcheck
     - cyclop
-    - deadcode
     - depguard
     - dogsled
     - dupl
@@ -16,26 +16,18 @@ linters:
     - errorlint
     - exhaustive
     - exportloopref
-    - forbidigo
-    - forcetypeassert
     - gocognit
     - goconst
     - gocritic
     - gocyclo
-    - godox
-    - goerr113
     - gofmt
     - gomodguard
     - gosimple
-    - govet
-    - ifshort
     - importas
     - ineffassign
-    - lll
     - makezero
     - megacheck
     - nakedret
-    - nestif
     - nilerr
     - nilnil
     - noctx
@@ -43,24 +35,19 @@ linters:
     - paralleltest
     - prealloc
     - predeclared
-    - revive
-    - rowserrcheck
     - staticcheck
-    - structcheck
     - stylecheck
-    - tagliatelle
     - tenv
     - typecheck
     - unconvert
-    - unparam
     - unused
-    - varcheck
-    - wastedassign
     - whitespace
   fast: false
 issues:
   exclude:
-    - "err113"
+    - "SA1019"
+    - "ST1003"
+    - "regexpMust"
 output:
   staticcheck:
     checks: [ "all" ]
